--- a/16-01-23/ciciuliu/src/components/filter/index.css
+++ b/16-01-23/ciciuliu/src/components/filter/index.css
@@ -1,15 +1,15 @@
-.NewMessage {
-  margin: 24px 0;
-  width: 40%;
+.Filter {
+  margin: 16px 0;
+  width: 22%;
 }
 
-.NewMessage form {
+.Filter form {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 8px;
 }
 
-.NewMessage form input {
+.Filter form input {
   height: 30px;
   padding: 4px 10px;
   border: 0;
@@ -20,6 +20,7 @@
   display: flex;
   align-self: flex-end;
   justify-content: center;
-  width: 20%;
+  width: 30%;
   font-weight: bold;
+  background-color: #1DA1F2;
 }
