--- a/16-01-23/ciciuliu/src/components/friendList/index.css
+++ b/16-01-23/ciciuliu/src/components/friendList/index.css
@@ -1,27 +1,15 @@
 .FriendsList {
-  width: 95vw;
+  width: 90vw;
   padding: 12px 1%;
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  flex-direction: row;
   gap: 16px;
   overflow-x: scroll;
 }
 
-::-webkit-scrollbar {
-  width: 20px;
-}
-
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px #14171A; 
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #1DA1F2; 
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: hsl(203, 90%, 34%); 
+@media (min-width: 800px) {
+  .FriendsList {
+    flex-direction: column;
+    gap: 28px;
+  }
 }
